RESOLVED FIXED159560
Regression(r201805): Crash with <use> resource that has Vary header
https://bugs.webkit.org/show_bug.cgi?id=159560
Summary Regression(r201805): Crash with <use> resource that has Vary header
Antti Koivisto
Reported 2016-07-08 09:18:37 PDT
0 com.apple.WebCore 0x1075573b9 WebCore::FrameLoader::outgoingReferrer() const + 9 (/Library/Caches/com.apple.xbs/Sources/WebCore/WebCore-7602.1.37/loader/FrameLoader.cpp:927) 1 com.apple.WebCore 0x10780be84 WebCore::addAdditionalRequestHeadersToRequest(WebCore::ResourceRequest&, WebCore::CachedResourceLoader const&) + 756 (/Library/Caches/com.apple.xbs/Sources/WebCore/WebCore-7602.1.37/loader/cache/CachedResource.cpp:196) 2 com.apple.WebCore 0x10780cd7b WebCore::CachedResource::varyHeaderValuesMatch(WebCore::ResourceRequest const&, WebCore::CachedResourceLoader const&) + 555 (/Library/Caches/com.apple.xbs/Sources/WebCore/WebCore-7602.1.37/loader/cache/CachedResource.cpp:783) 3 com.apple.WebCore 0x10780fb5f WebCore::CachedResourceLoader::determineRevalidationPolicy(WebCore::CachedResource::Type, WebCore::CachedResourceRequest&, WebCore::CachedResource*) const + 111 (/Library/Caches/com.apple.xbs/Sources/WebCore/WebCore-7602.1.37/loader/cache/CachedResourceLoader.cpp:756) 4 com.apple.WebCore 0x10751a28b WebCore::CachedResourceLoader::requestResource(WebCore::CachedResource::Type, WebCore::CachedResourceRequest&) + 2171 (/Library/Caches/com.apple.xbs/Sources/WebCore/WebCore-7602.1.37/loader/cache/CachedResourceLoader.cpp:606) 5 com.apple.WebCore 0x10780ee15 WebCore::CachedResourceLoader::requestSVGDocument(WebCore::CachedResourceRequest&) + 37 (/Library/Caches/com.apple.xbs/Sources/WebCore/WebCore-7602.1.37/loader/cache/CachedResourceLoader.cpp:263) 6 com.apple.WebCore 0x1085079fa WebCore::SVGUseElement::updateExternalDocument() + 1402 (/Library/Caches/com.apple.xbs/Sources/WebCore/WebCore-7602.1.37/svg/SVGUseElement.cpp:575) 7 com.apple.WebCore 0x108507430 WebCore::SVGUseElement::insertedInto(WebCore::ContainerNode&) + 80 (/Library/Caches/com.apple.xbs/Sources/WebCore/WebCore-7602.1.37/svg/SVGUseElement.cpp:110) 8 com.apple.WebCore 0x10786221a WebCore::notifyNodeInsertedIntoDocument(WebCore::ContainerNode&, WebCore::Node&, WTF::Vector<WTF::Ref<WebCore::Node>, 11ul, WTF::CrashOnOverflow, 16ul>&) + 42 (/Library/Caches/com.apple.xbs/Sources/WebCore/WebCore-7602.1.37/dom/ContainerNodeAlgorithms.cpp:72)
Attachments
Patch (6.42 KB, patch)
2016-07-08 09:29 PDT, Antti Koivisto
cdumez: review+
Antti Koivisto
Comment 1 2016-07-08 09:18:53 PDT
Antti Koivisto
Comment 2 2016-07-08 09:29:27 PDT
Chris Dumez
Comment 3 2016-07-08 09:31:56 PDT
Comment on attachment 283170 [details] Patch r=me
Antti Koivisto
Comment 4 2016-07-08 10:12:32 PDT
Note You need to log in before you can comment on or make changes to this bug.