Regression(r201805): Crash with <use> resource that has Vary header https://bugs.webkit.org/show_bug.cgi?id=159560 <rdar://problem/27034208>

Reviewed by Chris Dumez.

Source/WebCore:

In some situations (SVG <use> element for example) we may try to load resources from frameless documents.
Such loads always fail. The new vary header verification code path tried to access the frame earlier without
null check.

Test: http/tests/cache/vary-frameless-document.html

* loader/cache/CachedResource.cpp:
(WebCore::CachedResource::failBeforeStarting):
(WebCore::addAdditionalRequestHeadersToRequest):

    Null check frame.
    Also move the resource type check here so all callers get the same behavior.

(WebCore::CachedResource::addAdditionalRequestHeaders):
(WebCore::CachedResource::load):
(WebCore::CachedResource::varyHeaderValuesMatch):

LayoutTests:

* http/tests/cache/resources/svg-defs-vary.php: Added.
* http/tests/cache/vary-frameless-document-expected.txt: Added.
* http/tests/cache/vary-frameless-document.html: Added.



Canonical link: https://commits.webkit.org/177706@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202985 268f45cc-cd09-0410-ab3c-d52691b4dbfc